# dgeoijgis

./: LICENSE  README.md
Sedona/: pom.xml
Sedona/src/main/java/dgeo/vs/spark/queries/: Load.java  M7_PR_LM_AW.java  M8_PR_AW_ED.java  M9_AW_LW_ED.java
sources/: Makefile.am  clean  configure.ac  linuxconfig  macconfig
sources/distr/: Makefile.bkp
sources/distr/src/cclient/: client.go  commands.c  commands.h  deps.h  distribute.c  djoinexec.c  djoinhist.c  djoinhistbs.c  djoinhistlagrange_sm.c  djoinhistlp.c  goheader.h  join.go  lang.c  load.go  minknap.c  round.c  round.h  sm.h  system.c  system.h
sources/distr/src/dgeo/: distrs.go
sources/distr/src/peer/: dispatch_join.go  dispatcher.go  geodb.go  heart_beat.go  messages.go  service.go  ss_djoin.c  ss_djoin.h  ss_dscopy.c  ss_dscopy.h  version.go
sources/stats/: Makefile.am  resource.c  resource.h
sources/utils/: Makefile.am  dataset.c  dataset.h  dataset_persist.c  geosext.cpp  geosext.h  glibwrap.c  glibwrap.h  glpk_cplex_wrap.c  histcommon.c  histcommon.h  histogram_grid.c  histogram_grid.h  joincommon.c  multiway-join.h  ogrext.cpp  ogrext.h  utils.c  utils.h  wkbconvert.c  wkbconvert.h
